<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".basic.PeerActivity">
    <FrameLayout
        android:id="@+id/publisher_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <org.webrtc.SurfaceViewRenderer
            android:id="@+id/full_screen_renderer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top" />

        <org.webrtc.SurfaceViewRenderer
            android:id="@+id/pip_view_renderer"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="bottom|right"
            android:layout_margin="5dp"
            android:paddingHorizontal="5dp"
            android:paddingVertical="4dp" />

    </FrameLayout>

    <Spinner
        android:id="@+id/stream_info_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="3dp"/>


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/sym_action_chat"
        android:layout_alignParentLeft="true"
        android:layout_margin="3dp"
        android:onClick="showSendDataChannelMessageDialog"
        android:layout_centerVertical="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stream_id_edittext"
        android:padding="5dp"
        android:layout_marginBottom="5dp"
        android:background="?android:attr/colorBackground"
        android:layout_above="@id/activity_peer_button_container"/>
    <LinearLayout
        android:id="@+id/activity_peer_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center">
        <Button
            android:id="@+id/show_stats_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show Stats"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Join"
            android:layout_marginLeft="10dp"
            android:id="@+id/start_streaming_button"
            android:onClick="startStreaming"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            />

    </LinearLayout>



        <TextView
            android:id="@+id/broadcasting_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            android:textSize="11sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"/>
</RelativeLayout>