...
                            android:text="Bytes Sent:"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        </TextView>
                        <TextView
                            android:id="@+id/multitrack_stats_popup_bytes_sent_video_textview"
                            android:layout_marginLeft="2.5dp"
                            android:text=""
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        </TextView>
...
                    android:layout_height="wrap_content">

                </TextView>

                <androidx.recyclerview.widget.RecyclerView
                    android:orientation="vertical"
                    android:id="@+id/multitrack_stats_popup_play_stats_video_track_recyclerview"
                    android:layout_below="@+id/multitrack_stats_popup_play_stats_video_track_stats_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

...
        <Button
            android:layout_marginTop="5dp"
            android:text="Close"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/multitrack_stats_popup_play_stats_main_container"

            android:id="@+id/multitrack_stats_popup_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Button>

    </RelativeLayout>
...
