...
                android:layout_height="wrap_content">

            </TextView>

            <TextView
                android:layout_marginLeft="5dp"
                android:id="@+id/track_stats_item_bytes_received_textview"
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

...
