...
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stream_id_edittext"
        android:padding="5dp"
        android:background="?android:attr/colorBackground"
        android:layout_above="@id/start_streaming_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start"
        android:id="@+id/start_streaming_button"
...
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="3dp"
        />

        <TextView
            android:id="@+id/broadcasting_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="14sp"
            android:visibility="visible"
            android:layout_alignParentTop="true"
...
